plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.edwardjones.cre'
version = '1.0.0-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot Starter
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Spring Data JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// H2 Database
	runtimeOnly 'com.h2database:h2'

	// Spring for Apache Kafka
	implementation 'org.springframework.kafka:spring-kafka'

	// Lombok to reduce boilerplate code
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Spring Boot Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// Spring Kafka Test
	testImplementation 'org.springframework.kafka:spring-kafka-test'
}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs '-javaagent:' + configurations.testRuntimeClasspath.find { it.name.contains('mockito-core') }.absolutePath
	jvmArgs '-XX:+EnableDynamicAgentLoading'
}
